# CommFlow

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
DeployScripts/: Build-WindowsPortable.ps1
deploy-artifacts/CommFlow-portable/: LICENSE  SIGNATURE.txt
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  app.manifest  rust-toolchain.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: client_commands.rs  commission_commands.rs  data_commands.rs  data_storage.rs  mod.rs
src-tauri/src/repository/: client_repository.rs  commission_repository.rs  file_storage.rs  mod.rs
src-tauri/src/services/: client_service.rs  commission_service.rs  image_service.rs  mod.rs  validation_service.rs
src/bootstrap/: migration.ts
src/business/: ClientBusinessLogic.ts  CommissionBusinessLogic.ts
src/components/: ClientCard.css  ClientCard.tsx  ClientList.css  ClientList.tsx  ClientModal.css  ClientModal.tsx  CommListShared.css  CommissionModal.css  CommissionModal.tsx  EditCommissionModal.tsx  ErrorBoundary.tsx  ExportImportData.css  ExportImportData.tsx  HistoryCommCard.css  HistoryCommCard.tsx  HistoryCommList.css  HistoryCommList.tsx  ImageCropModal.css  ImageCropModal.tsx  ImageViewer.css  ImageViewer.tsx  PendingCommCard.css  PendingCommCard.tsx  PendingCommList.css  PendingCommList.tsx  SearchFilter.css  SearchFilter.tsx  SortModal.css  SortModal.tsx  ToastNotifications.css  ToastNotifications.tsx
src/contexts/: ClientContext.tsx  (+2 more)
(+36 files in other folders)
