[package]
name = "CommFlow"
version = "0.5.2"
description = "CommFlow - Commission Management Application"
authors = ["OtterWithInternet"]
license = "MIT"
repository = "https://github.com/otterwithinternet/CommFlow"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["serde"] }
fs_extra = "1.3"
regex = "1.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
